exports[`Input component snapshot renders as textarea with max length 1`] = `
<p>
  <label
    className="label_7wpiph"
    htmlFor="Form-bio">
    Bio
  </label>
  <textarea
    className="textarea_1huv73q"
    id="Form-bio"
    maxLength="1000"
    name="bio"
    placeholder="Bio"
    value="This is my bio" />
</p>
`;

exports[`Input component snapshot renders basic required data 1`] = `
<p>
  <label
    className="label_7wpiph"
    htmlFor="Form-email" />
  <input
    className="input_10e10cq"
    id="Form-email"
    name="email"
    type="email" />
</p>
`;

exports[`Input component snapshot renders extra info and it is active and invalid 1`] = `
<p>
  <label
    className="label_7wpiph"
    htmlFor="Form-email">
    Email
  </label>
  <input
    className="input_10e10cq-o_O-validatedInput_4hnf83"
    id="Form-email"
    name="email"
    placeholder="Email"
    type="email"
    value="notAnEmail" />
</p>
`;

exports[`Input component snapshot renders label and input is invalid 1`] = `
<p>
  <label
    className="label_7wpiph"
    htmlFor="Form-email">
    Email
  </label>
  <input
    className="input_10e10cq-o_O-validatedInput_4hnf83-o_O-inputErr_229bd5"
    id="Form-email"
    name="email"
    type="email"
    value="notAnEmail" />
  <label
    className="error_1pg0y0x"
    htmlFor="Form-email">
    <i
      className="icon_1w16ibx fa fa-exclamation-triangle" />
    Input is invalid
  </label>
</p>
`;

exports[`Input component snapshot renders label and input is required 1`] = `
<p>
  <label
    className="label_7wpiph"
    htmlFor="Form-email">
    Email
  </label>
  <input
    className="input_10e10cq-o_O-validatedInput_4hnf83-o_O-inputErr_229bd5"
    id="Form-email"
    name="email"
    type="email" />
  <label
    className="error_1pg0y0x"
    htmlFor="Form-email">
    <i
      className="icon_1w16ibx fa fa-exclamation-triangle" />
    Input required
  </label>
</p>
`;

exports[`Input component snapshot renders label and is focused 1`] = `
<p>
  <label
    className="label_7wpiph"
    htmlFor="Form-firstname">
    Email
  </label>
  <input
    className="input_10e10cq"
    id="Form-firstname"
    name="firstname"
    type="text"
    value="John" />
</p>
`;
